--- a/python-flask/Dockerfile
+++ b/python-flask/Dockerfile
@@ -7,7 +7,7 @@
 FROM ubuntu:trusty
 
 # File Author / Maintainer
-MAINTAINER Neil McGettigan
+MAINTAINER Neil_McGettigan
 
 # Add the application resources URL
 RUN echo "deb http://ie.archive.ubuntu.com/ubuntu/ trusty main universe" >> /etc/apt/sources.list
